--- a/WebSample IOT/index.html
+++ b/WebSample IOT/index.html
@@ -17,5 +17,14 @@
             <li><a href="contact.html">Contact</a></li>
         </ul>
     </div>
+    <div class="content">
+        <h1>WELCOME TO VISION CONNECT</h1>
+        <p>Connecting the world with the power of technology</p>
+
+        <div>
+            <button type="button"><span></span>LEARN MORE</button>
+            <button type="button" onclick="window.location.href='https://accounts.google.com/signin'"><span></span>LOGIN WITH GOOGLE</button>
+        </div>
+       
 </body>
 </html>
