--- a/WebSample IOT/index.html
+++ b/WebSample IOT/index.html
@@ -12,7 +12,7 @@
         <img src="images/logo.png" class="logo">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="log.html">Log</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
@@ -22,7 +22,7 @@
         <p>Connecting the world with the power of technology</p>
 
         <div>
-            <button type="button"><span></span>LEARN MORE</button>
+            <button type="button" onclick="window.location.href='log.html'"><span></span>LEARN MORE</button>
             <button type="button" onclick="window.location.href='https://accounts.google.com/signin'"><span></span>LOGIN WITH GOOGLE</button>
         </div>
        
